# ptero-symlinks

./: Cargo.toml  LICENSE  README.md  symlinks.sh
.github/workflows/: build.yml
src/: main.rs
