[package]
name = "ptero_symlinks"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
authors = ["loki@crazycoder.dev"]
license = "MIT"

[[bin]]
name = "symlinks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
ureq = { version = "3.1.0", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml_ng = "0.10.0"
uzers = "0.12.1"

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
overflow-checks = true
lto = "thin"
strip = "debuginfo"
codegen-units = 1
panic = "abort"