[package]
name = "ptero_symlinks"
version = "2.0.2"
edition = "2024"
rust-version = "1.94"
authors = ["loki@crazycoder.dev"]
license = "MIT"

[[bin]]
name = "symlinks"
path = "src/main.rs"

[dependencies]
ureq = { version = "3.3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
uzers = "0.12"

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
overflow-checks = true
lto = "thin"
strip = "debuginfo"
codegen-units = 1
panic = "abort"
